# rust-playground

./: .gitignore  Makefile
actix-test/: Cargo.toml
actix-web-test/: Cargo.toml
actix-web-test/src/: main.rs
antlr4-test/: Cargo.toml
antlr4-test/src/: csvlexer.rs  csvlistener.rs  csvparser.rs  main.rs
async-trait/src/: main.rs
aws/cloudwatch/: Cargo.toml
aws/eventbridge/: Cargo.toml
aws/eventbridge/src/: main.rs
aws/src/: main.rs
chatroom/: chatroom  chatroom.rs
comment/: comment.rs
custom_types/: structures.rs
flow_control/: flow_control.rs
formatted_print/: debug.rs  display.rs  formatting.rs  print.rs  vec.rs
generics/src/: main.rs
html_parse/: Cargo.toml  Dockerfile
html_parse/src/: main.rs
http_frm/: Cargo.toml
http_frm/app/: Cargo.toml
http_frm/app/src/: http_server.rs  main.rs
http_frm/http_server/: Cargo.toml
http_frm/http_server/src/: http_server.rs
http_frm/http_server/src/rocket_server/: rocket_server.rs
http_frm/server/: Cargo.toml
http_frm/server/src/: lib.rs  server.rs
http_frm/src/: main.rs
http_frm/src/server/: server.rs
httpie/: Cargo.toml
httpie/src/: main.rs
macro/: macro.rs
mini-proxy/: Cargo.toml
mini-proxy/proxy/: Cargo.toml
mini-proxy/proxy/src/: main.rs  rt.rs
mini-proxy/upstream/app/src/: lib.rs
mini-redis/: Cargo.toml
mini-redis/src/: command.rs  connection.rs  db.rs  frame.rs  lib.rs  parse.rs  server.rs  shutdown.rs
mini-redis/src/cmd/: mod.rs
pi/: pi  pi.rs
primitives/: array_slices.rs  operators.rs  tuples.rs  types.rs
prom_test/: Cargo.toml
prom_test/src/: main.rs
rocket-code-gen-test/: Cargo.toml
rocket-code-gen-test/src/: main.rs
rocket-test/: Cargo.toml
rocket-test/src/: main.rs  server.rs
rust_threads/mpsc/src/: main.rs
rust_threads/rust_threads/: Cargo.toml
rust_threads/rust_threads/src/: main.rs
scrape_url/src/: main.rs
sql-parser/: Cargo.toml  test.sql
sql-parser/examples/: parse_select.rs
sql-parser/server/: Cargo.toml
sql-parser/server/src/: main.rs
sql-parser/src/: main.rs
tokio-test/: Cargo.toml
tokio-test/src/: main.rs
tracing_subscriber/: Cargo.toml
tracing_subscriber/src/: main.rs  yak_shave.rs
tracing_subscriber/src/yak_shave/: yak_shave.rs
trait-test/src/: main.rs
