[package]
name = "actix-web-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.20"
#actix-http = "3.0.0-beta.18" 
#actix-router = "0.5.0-rc.1"
#actix-web-codegen = "0.5.0-rc.1"

env_logger = "0.9"

#actix-codec = "0.4.1"
#actix-macros = "0.2.3"
#actix-rt = "2.6"
#actix-server = "2"
#actix-service = "2.0.0"
#actix-utils = "3.0.0"
#actix-tls = { version = "3.0.0", default-features = false, optional = true }

#actix-http = "3.0.0-beta.18"
#actix-router = "0.5.0-rc.1"
#actix-web-codegen = "0.5.0-rc.1"

#[lib]
#name = "actix_web"
#path = "../../actix-web/src/lib.rs"