[package]
name = "antlr4-test"
version = "0.1.0"
authors = ["mlycore <maxwell92@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
# antlr-rust = "0.2"
antlr-rust = { path = "../../antlr4rust" } 



