[package]
name = "mini-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
tracing = "0.1.13"
tracing-subscriber = "0.2.2"
structopt = "0.3.14"
bytes = "1"
atoi = "0.3.2"

[[bin]]
name = "mini-redis-server"
path = "src/bin/server.rs"

