[package]
name = "sql-parser"
version = "0.1.0"
edition = "2021"


[features]
default = ["std"]
std = []
# Enable JSON output in the `cli` example:
json_example = ["serde_json", "serde"]

[lib]
name = "sqlparser"
path = "../../sqlparser-rs/src/lib.rs" 

[dependencies]
simple_logger = "1.16.0"
bigdecimal = { version = "0.3", features = ["serde"], optional = true }
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
# serde_json is only used in examples/cli, but we have to put it outside
# of dev-dependencies because of
# https://github.com/rust-lang/cargo/issues/1596
serde_json = { version = "1.0", optional = true }