[package]
name = "eventbridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.47.0"
aws-sdk-eventbridge = "0.17.0"
tokio = { version = "1", features = ["full"]}
#tracing = "0.1.13"
#tracing-features = { version = "0.2.3" }
#tracing-subscriber = "0.3.9"
