[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
name = "rocket_server"
path = "../http_server/src/rocket_server/rocket_server.rs"

[dependencies]
http_server = { path = "../http_server" }
rocket = "0.5.0-rc.1"
#rocket_prometheus = "0.9.0"
rocket_prometheus = { path = "../../../rocket_prometheus" }
