[package]
name = "proxy"
version = "0.1.0"
edition = "2021"
description = "The main proxy entrypoint"

[dependencies]
tracing = "0.1.29"
tokio = { version = "1", features = ["rt", "time", "net"] }
num_cpus = { version = "1", optional = true }
linkerd-app = { path = "../../../linkerd2-proxy/linkerd/app"}
linkerd-signal = { path = "../../../linkerd2-proxy/linkerd/signal" }


[features]
default = ["multicore"]
multicore = ["tokio/rt-multi-thread", "num_cpus"]
