[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"]}
#sqlparser = "0.13.0"
#serde = { version = "1.0", features = ["derive"], optional = true}
#serde_json = { version = "1.0",  optional = true }